--- a/README.Rmd
+++ b/README.Rmd
@@ -23,8 +23,7 @@ knitr::opts_chunk$set(
 The goal of patchclampplotteR is to create a set of user-friendly tools for
 electrophysiologists who want to plot and analyze data from whole-cell patch
 clamp electrophysiology recordings. Here's some of the functions that this
-package can do:
-
+package can do (see below for examples!):
 
 * Plot raw evoked or spontaneous current amplitudes over time for all recordings at once.
 * Normalize current amplitudes relative to mean baseline values.
@@ -73,4 +72,25 @@ raw_eEPSC_control_plots <- plot_raw_current_data(
 
 raw_eEPSC_control_plots$AO
 ```
+Plot evoked current amplitudes summarized by sex:
+
+```{r example-summary-eEPSC-plot}
+plot_summary_current_data(
+  plot_category = 2,
+  plot_treatment = "Control",
+  data = sample_pruned_eEPSC_df$all_cells,
+  current_type = "eEPSC",
+  parameter = "amplitude",
+  include_representative_trace = "no",
+  signif_stars = "yes",
+  t_test_df = sample_eEPSC_t_test_df,
+  hormone_added = "Insulin",
+  large_axis_text = "no",
+  shade_intervals = "no",
+  hormone_or_HFS_start_time = 5,
+  treatment_colour_theme = sample_treatment_names_and_colours,
+  theme_options = sample_theme_options
+)
+```
+
 
