--- a/README.Rmd
+++ b/README.Rmd
@@ -93,4 +93,18 @@ plot_summary_current_data(
 )
 ```
 
+Plot a representative recording trace showing spontaneous currents:
+
+```{r example-spontaneous-current-trace-plot}
+plot_spontaneous_current_trace(
+  file = sample_abf_file,
+  plot_colour = "#6600cc",
+  include_scale_bar = "yes",
+  plot_episode = "epi1",
+  scale_bar_x_length = 1,
+  scale_bar_y_length = 10,
+  plot_x_min = 1,
+  plot_x_max = 3
+)
+```
 
